# PushNotification

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: dail_run.yaml
configs/: sources.yaml
src/push_notification/: config.py  main.py  models.py
src/push_notification/formatters/: default.py
src/push_notification/notifiers/: telegram.py
src/push_notification/sources/: __init__.py  base.py  knmi.py  weeronline.py
